--- a/WebContent/resources/css/login_ui.css
+++ b/WebContent/resources/css/login_ui.css
@@ -36,7 +36,7 @@
 
 		.wrapper{
 			margin: 0px auto;
-			height: 2000px;
+			min-height: 2000px;
 			width: 1000px;
 			border : 1px rgba(0, 0, 0, 0.2) solid;
 			border-radius: 10px;
@@ -67,6 +67,7 @@
 					margin : 20px;
 					border-radius: 5px;
 					border: 3px solid #D5D5D5;
+					
 				}
 					.sendEmail{
 						display:block;
@@ -155,20 +156,20 @@
 					text-indent : 5px;
 				}		
 			
-				.filebox .upload-name {
+				.fileboxWrapper .upload-name {
 				    display: inline-block;
 				    height: 40px;
 				    padding: 0 10px;
 				    vertical-align: middle;
 				    border: 1px solid #dddddd;
-				    width: 150px;
+				    width: 380px;
 				    color: #999999;
 				}		
 					.upload-name{
 						margin-left: 0px;
 					}
 				
-				.filebox label {
+				.fileboxWrapper label {
 				    display: inline-block;
 				    padding: 10px 15px;
 				    border-radius : 5px;
@@ -178,12 +179,12 @@
 				    cursor: pointer;
 				    height: 20px;
 				}			
-					.filebox input[type="file"] {
+					.fileboxWrapper input[type="file"] {
 					    position: absolute;
 					    width: 0;
 					    height: 0;
 					    padding: 0;
-					    overflow: hidden;
+					    overflow:hidden;
 					    border: 0;
 					}
 		
@@ -219,6 +220,7 @@
 		width: 400px;
 		height: 100px;
 		margin-top: 100px;
+		margin-bottom : 100px;
 		background-color: white;	
 		border : 1px solid #dddddd;
 		font-size: 20px;
@@ -232,14 +234,65 @@
 	input[type="text"]{
 		padding-left: 10px;
 	}
-	
+	input[type="date"]{
+		padding-left: 12px;
+		height : 37px;
+		color: #dddddd;
+	}
+
 	/* input Focus 조절하기 (focus outline 없에기 )  */
 	input:focus{
 		outline : none;
 	}
 
+	/* fontAwsome class 일괄 적용하기 */
+	.validCheckPassed {
+		width:450px; 
+		margin-left :170px;
+		text-align: left; 
+		color:green;
+		display:none;
+	}
+	.validCheckFailed{
+		width:450px; 
+		margin-left :170px;
+		text-align: left; 
+		color: #FF6161;
+		display:none;
+	}
 	
-	footer{
+	/* 이메일  check & 코드 check Div가 button의 inline요소에 붙는 현상 방지 */
+	#emailPassed{
+		padding-bottom: 30px;
+	}
+	#emailFailed{
+		padding-bottom: 30px;
+	}
+	#emailValiPassed{
+		padding-bottom: 30px;
+	}
+	#emailValiFailed{
+		padding-bottom: 30px;
+	}
+
+/* select tag의 css를 input과 일치시켜 통일 */
+	#selectKH {
+		width: 450px;
+		margin: 20px;
+		border-radius: 5px;
+		border: 3px solid #D5D5D5;
+		font-size: 90%;
+		color: gray;
+	}
+	#selectKH:focus{
+		outline : none;
+	}
+	/* 이미지 파일첨부 통과 메시지의 padding 값 조절 */
+	#filePassed{
+		padding-top: 20px;
+	}
+
+footer{
 		height: 300px;
 		
 	}
