--- a/WebContent/resources/css/login_ui.css
+++ b/WebContent/resources/css/login_ui.css
@@ -226,8 +226,14 @@
 		font-size: 20px;
 		font-weight: bolder;
 	}
-		.commitButton:hover{
-			background-color: #FFB751;
+		#backButton:hover{
+			background-color:#dddddd!important;
+		}
+		#joinButton{
+			background-color: lightgray;
+		}
+		#joinButton:hover{
+			background-color:#6ED000!important;
 		}
 	
 	/* placeholer 간격 두기 및 inputText 간격 두기 	*/
