--- a/WebContent/resources/css/adminPage/adminPageCSS.css
+++ b/WebContent/resources/css/adminPage/adminPageCSS.css
@@ -39,6 +39,28 @@
 .ap_button01:active {
     box-shadow: inset 1px 1px 1px #DFDFDF;   
 }
+.ap_button02 {
+    color: #444444;
+    background: #dc1a9721;
+    border: 1px #DADADA solid;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: 9pt;
+    outline: none;
+    margin-right: 10px;
+}
+.ap_button02:hover {
+    border: 1px #C6C6C6 solid;
+    box-shadow: 1px 1px 1px #EAEAEA;
+    color: #333333;
+    background: #dc1a9721;
+}
+.ap_button02:active {
+    box-shadow: inset 1px 1px 1px #DFDFDF;   
+}
+
+
 
 
 
@@ -96,7 +118,7 @@
 
 /* adminPage_memberBlock CSS */
 #ap_banTable{
-	width: 450px;
+	width: 700px;
 }
 #ap_banTable_id{
 	padding-left: 70px;
