--- a/WebContent/resources/css/food/food-form.css
+++ b/WebContent/resources/css/food/food-form.css
@@ -6,6 +6,17 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+      src : url("/resources/css/NotoSansCJKkr-hinted/NotoSansCJKkr-Regular.otf"); 
+      font-family: "han_sans_kr_medium";
+}
+
+@font-face {
+      src : url("/resources/css/NotoSansCJKkr-hinted/NotoSansCJKkr-Light.otf"); 
+      font-family: "han_sans_kr_Light";
+}
+
 html, body{
 	width: 100%;
 	height: 100%;
@@ -33,6 +44,10 @@ html, body{
 	font-size: 3.2vw;
 	color: #f29d2a;
 }
+	.stie_tit>a{
+		color: #f29d2a;
+	}
+
 	.title_food{
 		padding-top: 10px;
 		font-weight: bolder;
@@ -72,7 +87,7 @@ html, body{
 	background-color: #fecf92;
 	border-radius: 20px 20px 20px 20px;
 	z-index: 999;
-	font-family: 'SDSamliphopangche_Outline';
+	font-family: 'han_sans_kr_Medium';
 }
 #mypage{
 	border-radius: 20px 20px 0 0;
