[배석진] css 커밋테스트

--- a/WebContent/resources/css/studyPage/studyPageCSS.css
+++ b/WebContent/resources/css/studyPage/studyPageCSS.css
@@ -87,3 +87,24 @@ hr{
 	margin: 25px 0 25px 0; 
 	size: 20px;
 }
+/* 버튼 CSS */
+.ap_button01 {
+    color: #444444;
+    background: #F3F3F3;
+    border: 1px #DADADA solid;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: 9pt;
+    outline: none;
+    margin-right: 10px;
+}
+.ap_button01:hover {
+    border: 1px #C6C6C6 solid;
+    box-shadow: 1px 1px 1px #EAEAEA;
+    color: #333333;
+    background: #F7F7F7;
+}
+.ap_button01:active {
+    box-shadow: inset 1px 1px 1px #DFDFDF;   
+}
